[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "AnVIL-DD-Extract"
authors = [
  { name = "Morgan Higby-Flowers", email = "morgan.e.higby-flowers@vumc.org" }
]
description = "Extract Data Dictionaries from the AnVIL environment."
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "requests>=2.20.0",
  "pandas>=1.0.0",
  "openpyxl>=3.0.0"   # Used to parse the dbgap files...
]

dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
phs2dd = "ADDE:main"
